# Agentic_AI_Lab

Langchain_POC/: .env.example  .gitignore  langgraph.json  pyproject.toml
Langchain_POC/src/email_assistant/: graph.py  models.py  state.py
system_guardian_ai/Steup-phase1/: folder-creation.ps
system_guardian_ai/SystemGuardianAI/: .gitignore  app.py  requirements.txt  test_foundation.py
system_guardian_ai/SystemGuardianAI/1st Agent/: Test.py
system_guardian_ai/SystemGuardianAI/1st_Agent/: app.py  flight_finder_agent.py
system_guardian_ai/SystemGuardianAI/collectors/: cpu_collector.py  memory_collector.py
system_guardian_ai/SystemGuardianAI/config/: settings.py
system_guardian_ai/SystemGuardianAI/models/: system_models.py
system_guardian_ai/SystemGuardianAI/monitor/: cpu.py  disk.py  memory.py  process.py
system_guardian_ai/SystemGuardianAI/services/: health_service.py
system_guardian_ai/SystemGuardianAI/utils/: logger.py
