[project]
name = "email-assistant"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=1.0",
    "langchain-openai",
    "azure-identity",
    "python-dotenv",
    "pydantic>=2",
]

[project.optional-dependencies]
dev = ["langgraph-cli[inmem]"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]